Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97054

QSqlDatabase.open() warning

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 6.2.1, 6.3.0 Alpha
    • 6.2.0
    • SQL Support
    • None
    • All
    • 11f5c07c1b312d70197bbada3842d72c1c97c5ff (qt/qtbase/dev) 69080ce332cef9a405c38d298319de00c9e2dfd8 (qt/qtbase/6.2.1) 3b2c6b714736c075185c06fd701ace2535fc588e (qt/qtbase/6.2)

    Description

      Function QSqlDatabase.open() prints warning:

      "MySQL: Unable to set the client character set to utf8 (""). Using 'utf8' instead.".

       

      Tried to use wrong password and got a warning:

      MySQL: Unable to set the client character set to utf8 ("Access denied for user 'lsserver'@'localhost' (using password: YES)"). Using 'utf8' instead.

      Attachments

        For Gerrit Dashboard: QTBUG-97054
        # Subject Branch Project Status CR V

        Activity

          People

            thiago Thiago Macieira
            jirauser62202 user-16ddc (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: