MySQL: fix the check for the return value of mysql_set_character_set()

It returns zero on success and non-zero on failure.

Fixes: QTBUG-97054
Change-Id: Iea05060bc2c046928536fffd16adf0177aadb082
Reviewed-by: Liang Qi <liang.qi@qt.io>
(cherry picked from commit 11f5c07c1b312d70197bbada3842d72c1c97c5ff)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>